Add Product File Upload and Product Delete feature

--- a/src/assets/i18n/locale-en.json
+++ b/src/assets/i18n/locale-en.json
@@ -117,7 +117,8 @@
         "VARIANT_NAME": {
           "TITLE": "Variant Name"
         }
-      }
+      },
+      "DELETE_MULTIPLE_DATA": "Delete {{selectedLength}} data ?"
     }
   },
   "COMMON": {
