Added Unit in Page

--- a/src/assets/i18n/locale-en.json
+++ b/src/assets/i18n/locale-en.json
@@ -116,6 +116,9 @@
         },
         "VARIANT_NAME": {
           "TITLE": "Variant Name"
+        },
+        "UNIT": {
+          "TITLE": "Unit"
         }
       },
       "DELETE_MULTIPLE_DATA": "Delete {{selectedLength}} data ?",
