Update navigation json

--- a/src/assets/i18n/locale-en.json
+++ b/src/assets/i18n/locale-en.json
@@ -441,7 +441,12 @@
       },
       "UNIT": {
         "TITLE": "Product Unit"
-      }
+      },
+      "ADMIN": {
+        "TITLE": "Admin Home"
+      },
+      "LOGOUT": "Logout",
+      "MY_PROFILE": "My Profile"
     }
   },
   "SUBJECT": {
